# Ex3

./: .gitignore  .gitignore.txt  AGENTS.md  README.md  opencode.json  pyproject.toml
.github/workflows/: opencode-review.yml  opencode-triage.yml  opencode.yml
myproject/: db.sqlite3
myproject/myapp/: admin.py  models.py  urls.py  views.py
myproject/myapp/migrations/: 0001_initial.py  0002_alter_movie_poster_image_alter_review_movie_and_more.py
myproject/myapp/static/css/: style.css
myproject/myapp/templates/: base.html  home.html  login.html  movie_detail.html  movie_list.html  register.html  review.html
myproject/myapp/templates/partials/: movie_results.html
myproject/myproject/: settings.py  urls.py
openspec/: config.yaml
openspec/specs/api/: spec.md
openspec/specs/database/: spec.md
openspec/specs/templates/: spec.md
